# sito-punti

./: .gitignore  .gitmodules  Admin Dashboard Panel.rar  CONTRIBUTING.md  LICENSE  README.md  bottostyle.rar  main.py  popupclasse.rar  punteggi.rar  pyproject.toml  requirements.txt  setup.bat  setup.sh  todo.txt  versioni.txt
.github/workflows/: main.yml
data/: errore.txt  log.txt  punti.json
docs/: index.html  search.js  sito.html
docs/sito/: autenticazione.html  auth_funcs.html  costanti.html  database_funcs.html  errors_utils.html  excel_funcs.html  load_data.html  misc_utils_funcs.html  modelli.html  pagine_sito.html
instance/: database.db  errore.txt  foglio.csv  foglio.xlsx  versioni.txt
misc_data/: versioni.txt
sito/: __init__.py  autenticazione.py  costanti.py  load_data.py  modelli.py  pagine_admin.py  pagine_sito.py  refactor.py
sito/auth_funcs/: __init__.py  authentication_utils.py
sito/chart_funcs/: __init__.py  chart_data_funcs.py
sito/data/: punti.json
sito/database_funcs/: __init__.py  classify_by_points.py  cronology_utils_funcs.py  database_queries.py  list_database_elements.py  manage_tables_rows.py  ui_apis.py
sito/errors_utils/: __init__.py
sito/excel_funcs/: __init__.py  excel_write_utils.py  load_excel_helpers.py
sito/misc_utils_funcs/: __init__.py  initialize_utils.py  misc_utils.py  parse_utils.py  permission_utils.py
sito/modelli/: __init__.py  classe.py  cronologia.py  info.py  squadra.py  utente.py
sito/templates/: admin_dashboard.html  admin_panel.html  base.html  classe.html  (+11 more)
templates/: index.html  login.html
(+71 files in other folders)
